--- a/client/index.jade
+++ b/client/index.jade
@@ -1,10 +1,10 @@
 doctype html
-html(ng-app='mean-template', lang='en')
+html(ng-app='task', lang='en')
   head
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1')
-    title MEAN Template
+    title Kwik Task
     link(href='/vendor/bootstrap/dist/css/bootstrap.css', rel='stylesheet')
     link(href='/vendor/fontawesome/css/font-awesome.css', rel='stylesheet')
     link(href='/index.css', rel='stylesheet')
@@ -24,4 +24,8 @@ html(ng-app='mean-template', lang='en')
     script(src='/index.js')
     script(src='/views/home/home.js')
     script(src='/components/home.js')
+    script(src='/views/priorities/priorities.js')
+    script(src='/components/priorities.js')
+    script(src='/views/tasks/tasks.js')
+    script(src='/components/tasks.js')
 
