--- a/client/index.less
+++ b/client/index.less
@@ -2,3 +2,14 @@ body{
   background-color: #ffdc00;
 }
 
+.fullWidth {
+  width: 100%;
+}
+
+.debugger {
+  border: 1px solid black;
+}
+
+.ng-invalid input{
+  background-color: rgba(0, 21, 0, 0.3);
+}
