--- a/client/nav.jade
+++ b/client/nav.jade
@@ -6,9 +6,11 @@
         span.icon-bar
         span.icon-bar
         span.icon-bar
-      a.navbar-brand(href='/') MEAN Template
+      a.navbar-brand(href='/') Kwik-Task 
 
     .collapse.navbar-collapse#bs-navbar-collapse
       ul.nav.navbar-nav.navbar-right
         li: a(href='/#/') Home
+        li: a(href='/#/priorities') Add Priority 
+        li: a(href='/#/tasks') Tasks
 
